# linux-typer

./: .gitignore  Cargo.toml  LICENSE  README.md  TECHNICAL.md  config.example.toml
apps/desktop/: index.html  package-lock.json  package.json
apps/desktop/src/: main.js  style.css
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/src/: lib.rs  main.rs
src/: audio.rs  cli.rs  clipboard.rs  config.rs  doctor.rs  downloader.rs  error.rs  fs_paths.rs  hotkey.rs  injector.rs  lib.rs  main.rs  platform.rs  service.rs  setup.rs  transcriber.rs  uinput.rs
