[package]
name = "linux-voice-typer"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
cpal = "0.18"
ctrlc = "3.5"
dialoguer = "0.11"
dirs = "5"
env_logger = "0.11"
hound = "3.5"
keytap = { version = "0.4", features = ["chord"] }
libc = "0.2"
log = "0.4"
serde = { version = "1", features = ["derive"] }
thiserror = "2"
toml = "0.8"
which = "6"
