[package]
name = "linux-voice-typer-desktop"
version = "0.1.0"
edition = "2024"

[lib]
name = "linux_voice_typer_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
linux-voice-typer = { path = "../../.." }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = ["tray-icon", "image-png"] }
